syntax = "proto3";

import  "response_code.proto";

option go_package = "./agent_proto";

package agent_proto;


service SystemService {
  rpc GetSysInfo (GetSysInfoRequest) returns (GetSysInfoResponse) {}
  rpc GetUserList (UserListRequest) returns (UserListResponse) {}
  rpc GetShellHistory (GetShellHistoryRequest) returns (GetShellHistoryResponse) {}
  rpc GetProcessList (GetProcessListRequest) returns (GetProcessListResponse) {}
}

message GetSysInfoRequest {

}

message GetSysInfoResponse {
  string message = 1;
  ResponseCode code = 2;
  PlatformModel platform = 3;
  CpuModel cpuModel = 4;
  string timezone = 5;
  string kernelVersion = 6;
  string os = 7;
  string arch = 8;
  string hostname = 9;
  string uptime = 10;
  string bootTime = 11;
  LoadAverage loadAverage = 12;
  MemoryStat virtualMemory = 13;
  MemoryStat swapMemory = 14;
  repeated Disk disks = 15;
}

message PlatformModel{
  string platform = 1;
  string family = 2;
  string version = 3;
}

message CpuModel{
  string modelName = 1;
  int32 physicalCount = 2;
  int32 logicalCount = 3;
}

message MemoryStat{
  string total = 1;
  string free = 2;
  string used = 3;
  string available = 4;
}

message LoadAverage {
  double one = 1;
  double five = 2;
  double fifteen = 3;
}

message UserListRequest {

}

message UserListResponse {
  string message = 1;
  ResponseCode code = 2;
  repeated UserInfo list = 3;
}


message UserInfo{
  string userName = 1;
  string userID = 2;
  string UserType = 3;
  string groupID = 4;
  string groupName = 5;
  string comment = 6;
  string homeDir = 7;
  string shell = 8;
  string lastLoginTime = 9;
  string status = 10;
}

message Disk{
  string device = 1;
  string mountPoint = 2;
  string fsType = 3;
  DiskUsage usage = 4;
}

message DiskUsage{
  string total = 1;
  string free = 2;
  string used = 3;
  string usedPercent = 4;
}

message GetShellHistoryRequest {
  string userName = 1;
}

message GetShellHistoryResponse {
  string message = 1;
  ResponseCode code = 2;
  repeated UserHistory listByUserName = 3;
}


message UserHistory{
  string userName = 1;
  repeated ShellHistory listByShellName = 2;
}

message ShellHistory{
  string shellName = 1;
  repeated string listByCommand = 2;
}

message GetProcessListRequest {
  bool withThreadTimes = 1; //一般传递false,很大,windows 不支持
}

message GetProcessListResponse {
  string message = 1;
  ResponseCode code = 2;
  repeated ProcessInfo list = 3;
}

message ProcessInfo{
  int32 pid = 1;
  int32 ppid = 2;
  string name = 3;
  string status = 4;
  string username = 5;
  string createTime = 6;
  string cpuPercent = 7;
  string memoryPercent = 8;
  ProcessMemoryInfoStat memory = 9;
  repeated ThreadTimesStat threads = 11;
  string exe = 12;
  string cwd = 13;
  string cmdline = 14;
}

message ProcessMemoryInfoStat  {
  string VMS     = 1;
  string HWM     = 2;
  string Data    = 3;
  string Stack   = 4;
}

message ThreadTimesStat {
  int32 tid = 1;
  string CPU = 2;
  double user = 3;
  double system = 4;
  double idle = 5;
  double nice = 6;
  double ioWait = 7;
  double irq = 8;
  double softIrq = 9;
}
